Terms of service Controller linkup with service and other fixes
